add yup validator
